# whoosh

./: Cargo.toml  LICENSE  README.md  whoosh.yml
benches/: router_benchmark.rs  transformer_benchmark.rs
examples/k6/: test_metrics.js
examples/monitoring/: compose.yml
examples/monitoring/grafana/provisioning/dashboards/: dashboard.yml  whoosh_dashboard.json
examples/monitoring/prometheus/: prometheus.yml
examples/simple/: Cargo.toml  README.md  main.py  pyproject.toml  whoosh.yml
examples/simple/src/: main.rs  ws.rs
src/: cli.rs  error.rs  lib.rs  websocket.rs
src/config/: builder.rs  mod.rs  models.rs
src/extensions/: acme.rs  api.rs  dns.rs  http.rs  https.rs  metrics.rs  mod.rs
src/router/: matcher.rs  mod.rs  parser.rs  registry.rs
src/server/: app.rs  context.rs  discovery.rs  extension.rs  mod.rs  proxy.rs  router.rs  service.rs  upstream.rs
src/transformer/: mod.rs  models.rs  parser.rs  registry.rs
tests/: api_integration.rs  dns_integration_test.rs
