[package]
name = "whoosh"
version = "0.1.0-alpha.0"
edition = "2024"
license = "MIT"
description = "Whoosh is a high-performance API Gateway built on Pingora (Rust) with dead-simple YAML configs. Inspired by Traefik’s expressive routing rules and Kong’s DB-less declarative configuration model."
authors = ["Hijriyan <april@kuli.dev>"]
readme = "README.md"
repository = "https://github.com/hijriyan/whoosh"

[dependencies]
pingora = { version = "0.6.0", features = ["lb", "proxy", "openssl"] }
async-trait = "0.1"
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
winnow = "0.7.3"
url = "2.5.8"
http = "1.4.0"
arc-swap = "1.8.0"
regex = "1.12.2"
tokio = { version = "1.49.0", features = ["full"] }
instant-acme = "0.8.4"
rcgen = "0.14.7"
log = "0.4.29"
env_logger = "0.11.8"
serde_json = "1.0.149"
dashmap = "6.1.0"
x509-parser = "0.18.0"
openssl = "0.10.75"
futures = "0.3.31"
tldextract-rs = { git = "https://github.com/emo-crab/tldextract-rs" }
prometheus = "0.13"
flate2 = "1.1.0"

[dev-dependencies]
criterion = "0.8.1"

[[bench]]
name = "router_benchmark"
harness = false

[[bench]]
name = "transformer_benchmark"
harness = false

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
