[package]
name = "whoosh"
version = "0.1.0-alpha.0"
edition = "2024"
license = "MIT"
description = "Whoosh is a high-performance API Gateway built on Pingora (Rust) with dead-simple YAML configs. Inspired by Traefik’s expressive routing rules and Kong’s DB-less declarative configuration model."
authors = ["Hijriyan <april@kuli.dev>"]
readme = "README.md"
repository = "https://github.com/hijriyan/whoosh"

[dependencies]
pingora = { version = "0.6.0", features = ["lb", "proxy", "openssl"] }
async-trait = "0.1"
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
winnow = "0.7.3"
url = "2.5.8"
http = "1.4.0"
arc-swap = "1.8.0"
regex = "1.12.2"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
instant-acme = "0.8.4"
rcgen = "0.14.7"
log = "0.4.29"
env_logger = "0.11.8"
serde_json = "1.0.149"
dashmap = "6.1.0"
x509-parser = "0.18.0"
openssl = "0.10.75"
futures = "0.3.31"
tldextract-rs = { git = "https://github.com/emo-crab/tldextract-rs" }
prometheus = "0.13"
flate2 = "1.1.0"
hickory-resolver = { version = "0.24", features = ["tokio", "tokio-runtime"] }
once_cell = "1.21.3"
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "auth"] }
tower_governor = "0.8"
base64 = "0.22"
utoipa = { version = "5.4.0", features = ["axum_extras", "yaml"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }

[dev-dependencies]
criterion = "0.8.1"
reqwest = { version = "0.12", features = ["json", "blocking"] }

[[bench]]
name = "router_benchmark"
harness = false

[[bench]]
name = "transformer_benchmark"
harness = false

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
